Develop a first version and add basic test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,14 @@ if (${wave_enable_tests})
       "-DCMAKE_INSTALL_PREFIX=${gtest_install_dir}"
   )
   link_directories("${gtest_install_dir}/lib")
+
+  # download test resource from https://archive.org/details/test_wav
+  set(test_resource_path "${CMAKE_BINARY_DIR}/test_resource")
+  file(MAKE_DIRECTORY "${test_resource_path}")
+  file(DOWNLOAD
+    "https://archive.org/download/test_wav/Untitled3.wav"
+    "${test_resource_path}/test1.wav"
+  )
 endif ()
 
 set(src "${CMAKE_SOURCE_DIR}/src")
