--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ if (${wave_enable_tests})
     GIT_REPOSITORY "https://github.com/google/googletest.git"
     GIT_TAG "release-1.8.0"
     CMAKE_ARGS
-      "-Dgtest_force_shared_crt=ON"
+      #"-Dgtest_force_shared_crt=ON"
       "-DCMAKE_INSTALL_PREFIX=${gtest_install_dir}"
   )
   link_directories("${gtest_install_dir}/lib")
