Update cmake version on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@ addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
+      - george-edison55-precise-backports
     packages:
       - cmake
+      - cmake-data
       - g++-5
 
 script:
