Manually download test resource from travis script since cmake seems to fail

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,14 @@ script:
   - mkdir build
   - cd build
   - cmake -DCMAKE_INSTALL_PREFIX=$PWD/install ..
+
+  # downloading resource doesn't work on current cmake version
+  - cd test_resource
+  - curl -O https://archive.org/download/test_wav/Untitled3.wav
+  - mv Untitled3.wav test1.wav
+  - cd ..
   - soxi test_resource/test1.wav
+
   - make
   - ./src/wave/wave_tests
   - make install
