--- a/.travis.yml
+++ b/.travis.yml
@@ -6,25 +6,17 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
       - george-edison55-precise-backports
+      - debian-sid
     packages:
       - cmake
       - cmake-data
       - g++-5
-      - sox
-
-before_script:
-  - curl -O https://archive.org/download/test_wav/Untitled3.wav
-  - mv Untitled3.wav test1.wav
-  - soxi test1.wav
+      - libssl1.0.0
 
 script:
   - mkdir build
   - cd build
   - cmake -DCMAKE_INSTALL_PREFIX=$PWD/install ..
-
-  # downloading resource doesn't seem to work
-  - mv ../test1.wav test_resource/test1.wav
-
   - make
   - ./src/wave/wave_tests
   - make install
