--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+dist: trusty
+
 language:
   - cpp
 
@@ -6,12 +8,10 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
       - george-edison55-precise-backports
-      - debian-sid
     packages:
       - cmake
       - cmake-data
       - g++-5
-      - libssl1.0.0
 
 script:
   - mkdir build
