Move tests back to test script on appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,8 +13,10 @@ build_script:
   - cd %APPVEYOR_BUILD_FOLDER%
   - cd build
   - cmake --build .
-  - src/wave/Debug/wave_tests.exe
   - cmake --build . --target install --config Release
+
+test_script:
+  - cmd /c %APPVEYOR_BUILD_FOLDER%/src/wave/Debug/wave_tests.exe
 
 artifacts:
   - path: build/install
