Add an error code to the open function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,10 +28,30 @@ if (${wave_enable_tests})
   # download test resource from https://archive.org/details/test_wav
   set(test_resource_path "${CMAKE_BINARY_DIR}/test_resource")
   file(MAKE_DIRECTORY "${test_resource_path}")
-  file(DOWNLOAD
-    "https://archive.org/download/test_wav/Untitled3.wav"
-    "${test_resource_path}/test1.wav"
+  file(DOWNLOAD "https://archive.org/download/test_wav/Untitled3.wav" "${test_resource_path}/Untitled3.wav")
+
+  # Download wikipedia's different format wave https://en.wikipedia.org/wiki/WAV
+  set(test_file_list
+    11k16bitpcm.wav
+    8k16bitpcm.wav
+    11k8bitpcm.wav
+    11kulaw.wav
+    8k8bitpcm.wav
+    8kulaw.wav
+    11kadpcm.wav
+    8kadpcm.wav
+    11kgsm.wav
+    8kmp316.wav
+    8kgsm.wav
+    8ksbc12.wav
+    8ktruespeech.wav
+    8kmp38.wav
+    8kcelp.wav
   )
+  foreach(file ${test_file_list})
+    message(STATUS "downloading test file ${file}")
+    file(DOWNLOAD "http://www.nch.com.au/acm/${file}" "${test_resource_path}/${file}")
+  endforeach()
 endif ()
 
 set(src "${CMAKE_SOURCE_DIR}/src")
