Split the headers.h file into several subfiles

--- a/src/wave/CMakeLists.txt
+++ b/src/wave/CMakeLists.txt
@@ -1,5 +1,18 @@
 add_library(wave
-  ${src}/wave/headers.h
+  ${src}/wave/header/data_header.h
+  ${src}/wave/header/data_header.cc
+  ${src}/wave/header/riff_header.h
+  ${src}/wave/header/riff_header.cc
+  ${src}/wave/header/fmt_header.h
+  ${src}/wave/header/fmt_header.cc
+  ${src}/wave/header/wave_header.h
+  ${src}/wave/header/wave_header.cc
+
+  # ${src}/wave/header.h
+  # ${src}/wave/header.cc
+  # ${src}/wave/header_list.h
+  # ${src}/wave/header_list.cc
+
   ${src}/wave/file.h
   ${src}/wave/file.cc
 )
@@ -20,6 +33,7 @@ if (${wave_enable_tests})
   include(GoogleTest)
   add_executable(wave_tests
     ${src}/wave/file_test.cc
+    # ${src}/wave/header_test.cc
   )
 
   add_dependencies(wave_tests
@@ -51,7 +65,7 @@ if (${wave_enable_tests})
     )
   endif()
 
-  gtest_add_tests(TARGET wave_tests )
+  gtest_add_tests(TARGET wave_tests)
 
   target_include_directories(wave_tests
     PUBLIC
