Avoid using shared_ptr on header iterators for c++98 compatibility

--- a/src/wave/CMakeLists.txt
+++ b/src/wave/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(wave
   ${src}/wave/header_list.h
   ${src}/wave/header_list.cc
 
+  ${src}/wave/error.h
   ${src}/wave/file.h
   ${src}/wave/file.cc
 )
